<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="24.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cfg_title" android:fontFamily="sans-serif-light" />

        <TextView android:textSize="15.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/cfg_dark" android:alpha="0.7" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <Button android:tag="10" android:text="10" android:onClick="onBg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="20" android:text="20" android:onClick="onBg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="40" android:text="40" android:onClick="onBg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="60" android:text="60" android:onClick="onBg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="80" android:text="80" android:onClick="onBg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="90" android:text="90" android:onClick="onBg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>

        <TextView android:textSize="15.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/cfg_grad" android:alpha="0.7" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <Button android:tag="100" android:text="▲" android:onClick="onBg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="101" android:text="▼" android:onClick="onBg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="102" android:text="◀" android:onClick="onBg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="103" android:text="▶" android:onClick="onBg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="104" android:text="⤢" android:onClick="onBg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
        <Button android:tag="-1" android:text="@string/cfg_reset" android:onClick="onBg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" />

        <TextView android:textSize="15.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="@string/cfg_second" android:alpha="0.7" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <Button android:tag="0" android:text="●" android:textColor="#fff5f1e8" android:textSize="20.0sp" android:onClick="onSecond" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="1" android:text="●" android:textColor="#ff8a8a8a" android:textSize="20.0sp" android:onClick="onSecond" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="2" android:text="●" android:textColor="#ff7d8bd4" android:textSize="20.0sp" android:onClick="onSecond" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="3" android:text="●" android:textColor="#ff9e2b3a" android:textSize="20.0sp" android:onClick="onSecond" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="4" android:text="●" android:textColor="#ffa8c0d8" android:textSize="20.0sp" android:onClick="onSecond" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="5" android:text="●" android:textColor="#ffc9a86a" android:textSize="20.0sp" android:onClick="onSecond" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="6" android:text="●" android:textColor="#ffd8c9a8" android:textSize="20.0sp" android:onClick="onSecond" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>

        <TextView android:textSize="15.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/cfg_fmt" android:alpha="0.7" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <Button android:tag="auto" android:text="Auto" android:onClick="onFmt" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="24" android:text="24" android:onClick="onFmt" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="12" android:text="12" android:onClick="onFmt" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>

        <TextView android:textSize="15.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="@string/cfg_zones" android:alpha="0.7" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <Button android:tag="0" android:text="@string/cfg_z0" android:onClick="onZone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="0" android:text="↺" android:onClick="onZoneReset" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView android:textSize="12.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cfg_zd0" android:alpha="0.55" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <Button android:tag="1" android:text="@string/cfg_z1" android:onClick="onZone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="1" android:text="↺" android:onClick="onZoneReset" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView android:textSize="12.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cfg_zd1" android:alpha="0.55" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <Button android:tag="2" android:text="@string/cfg_z2" android:onClick="onZone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="2" android:text="↺" android:onClick="onZoneReset" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView android:textSize="12.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cfg_zd2" android:alpha="0.55" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <Button android:tag="3" android:text="@string/cfg_z3" android:onClick="onZone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="3" android:text="↺" android:onClick="onZoneReset" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView android:textSize="12.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cfg_zd3" android:alpha="0.55" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <Button android:tag="4" android:text="@string/cfg_z4" android:onClick="onZone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <Button android:tag="4" android:text="↺" android:onClick="onZoneReset" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView android:textSize="12.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cfg_zd4" android:alpha="0.55" />
        <Button android:text="@string/cfg_done" android:onClick="onDone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" />
    </LinearLayout>
</ScrollView>
